<resources>
    <string name="app_name">Ringtone Maker</string>
    <string name="welcome_hint">Tube MP3 Ringtone Maker </string>

    <string name="facebook_app_id">710825282450762</string>

    <string name="music_fragment_banner">ca-app-pub-1877164599441785/5129122154</string>
    <string name="record_fragment_banner">ca-app-pub-1877164599441785/7942987757</string>
    <string name="cut_fragment_banner">ca-app-pub-1877164599441785/5489048956</string>
    <string name="cut_banner">ca-app-pub-1877164599441785/8442515354</string>

    <string name="home_native">ca-app-pub-1877164599441785/8163313756</string>
    <string name="save_success_native">ca-app-pub-1877164599441785/9640046957</string>
    <string name="scan_native">ca-app-pub-1877164599441785/2116780157</string>



    <!--main menu-->
    <string name="menu_sort">Sort by……</string>
    <string name="menu_sort_name">Name</string>
    <string name="menu_sort_length">Length</string>
    <string name="menu_sort_date">Date</string>
    <string name="menu_sort_track">Track</string>
    <string name="menu_sort_artist">Artist</string>
    <string name="menu_sort_album">Album</string>


    <string name="menu_about">About</string>
    <string name="menu_rate">Rate us</string>
    <string name="menu_invite">Invite Friends</string>
    <string name="menu_help">Help and Feedback</string>

    <string name="menu_set_default">Set as default ringtone</string>
    <string name="menu_set_notification">Set as default notification</string>
    <string name="menu_set_alarm">Set as alarm ringtone</string>
    <string name="menu_share">Share</string>


    <string name="share_to_friends">Share to friends</string>

    <!--title-->
    <string name="title_cutter">Cut Audio</string>
    <string name="title_main">Ringtone Maker</string>


    <!--第三方-->
    <string name="start_marker">Start marker</string>
    <string name="end_marker">End marker</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="start_label">Start</string>
    <string name="end_label">End</string>
    <string name="total">Length:</string>
    <!-- Progress dialog text for loading or saving... -->
    <string name="progress_dialog_loading">Loading...</string>
    <string name="progress_dialog_saving">Saving...</string>

    <string name="play_error">Unable to play this media file</string>
    <string name="no_unique_filename">Unable to find unique filename</string>
    <string name="too_small_error">Can\'t save a file that small, try making it longer.</string>
    <string name="write_error">Error writing file</string>
    <string name="read_error">Error reading file</string>

    <string name="bad_extension_error">Sorry, Ringdroid is not yet able to edit files of type</string>
    <string name="no_extension_error">Sorry, Ringdroid can\'t edit a file if it doesn\'t have an extension like .mp3 or .wav</string>

    <string name="time_seconds">seconds</string>
    <string name="progress_dialog_recording">Recording…</string>


    <!--
     File Save dialog
     -->

    <string name="file_save_title">Save As:</string>
    <string name="file_save_button_save">Save</string>
    <string name="file_save_button_cancel">Cancel</string>

    <string name="ringtone_type_label">Type:</string>

    <string name="type_music">Music</string>
    <string name="type_alarm">Alarm</string>
    <string name="type_notification">Notification</string>
    <string name="type_ringtone">Ringtone</string>

    <string name="ringtone_name_label">FileName:</string>

    <string name="artist_name">mp3 cutter</string>

    <string name="alert_title_success">Success</string>
    <string name="alert_title_failure">Error</string>
    <string name="alert_ok_button">OK</string>

    <string name="no_space_error">Your SD card is full, there is not enough space to save this file.</string>


    <string name="search_hint">Search</string>

    <string name="no_data">No datas</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_success"> delete success</string>

    <string name="tab_one">Home</string>
    <string name="tab_two">Library</string>
    <string name="tab_three">Cropped</string>
    <string name="tab_four">Record</string>

    <string name="home_music_count">%1$d songs</string>
    <string name="home_record_count">%1$d records</string>
    <string name="home_cuttered_count">%1$d croppeds</string>
    <string name="home_cut_count">You have cutted %1$d songs, share it!</string>
    <string name="home_music_count_share">You have %1$d musics, you can share!</string>


    <!--about-->
    <string name="about_version">Version: V %1$s</string>

    <string name="error_no_sdcard">no sdcard</string>
    <string name="error_state_record">recording now.please stop recording firstly</string>
    <string name="error_unknown">unknown error</string>

    <string name="delete_content">Are you sure to delete this file?</string>
    <string name="set_ringtone_content">Are you sure to set as default ringtone?</string>
    <string name="set_notification_content">Are you sure to set as default notification?</string>
    <string name="set_alarm_content">Are you sure to set as alarm ringtone?</string>

    <string name="delete_title">Delete file</string>
    <string name="set_ringtone_title">Set as default ringtone</string>
    <string name="set_notification_title">Set as default notification</string>
    <string name="set_alarm_title">Set as default alarm</string>

    <string name="set_ringtone_success">Yes, Set Default Ringtone success!</string>
    <string name="set_notification_success">Yes, Set Default Notification success!</string>
    <string name="set_alarm_success">Yes, Set Default Alarm success!</string>

    <!--add-->
    <string name="menu_assgin">Assign to contact</string>
    <string name="success_contact_ringtone">Successfully assigned ringtone to:</string>

    <string name="permisson_sd">This app needs access to your SD, so you can edit all your musics.</string>
    <string name="permisson_contact">This app needs access to your contact, so you can set ringtone.</string>


    <string name="rate_stars">Love Ringtone Maker?</string>
    <string name="rate_content_default">You’ve experienced Ringtone Maker successfully. Please support us with a 5-star ratings.</string>
    <string name="rate_content_1_4">Would you mind giving us some feedbacks so that we can do better?</string>
    <string name="rate_content_5">We are feeling loved. Thanks! Please submit your rating on Play Store.</string>
    <string name="rate_dislike">Dislike it</string>
    <string name="rate_cancel">Cancel</string>
    <string name="rate_feedback">Feedback</string>
    <string name="rate_us">Rate Us</string>

</resources>
