<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/menu_group_sort">
        <item
            android:id="@+id/menu_sort"
            android:title="@string/menu_sort">
            <!-- 二级菜单 -->
            <menu>
                <item
                    android:id="@+id/menu_sort_name"
                    android:title="@string/menu_sort_name">

                </item>
                <item
                    android:id="@+id/menu_sort_length"
                    android:title="@string/menu_sort_length">

                </item>
                <item
                    android:id="@+id/menu_sort_date"
                    android:title="@string/menu_sort_date">

                </item>
            </menu>
        </item>
    </group>
    <item
        android:id="@+id/menu_about"
        android:actionProviderClass="android.widget.ShareActionProvider"
        app:showAsAction="never"
        android:title="@string/menu_about" />
    <item
        android:id="@+id/menu_rate"
        android:actionProviderClass="android.widget.ShareActionProvider"
        app:showAsAction="never"
        android:title="@string/menu_rate" />
    <item
        android:id="@+id/menu_invite"
        android:actionProviderClass="android.widget.ShareActionProvider"
        app:showAsAction="never"
        android:title="@string/menu_invite" />
    <item
        android:id="@+id/menu_help"
        android:actionProviderClass="android.widget.ShareActionProvider"
        app:showAsAction="never"
        android:title="@string/menu_help" />
</menu>