<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300sp"
    android:layout_height="wrap_content"
    android:padding="10dip"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dip"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="20dip"
        android:text="@string/file_save_title"
        android:textColor="@color/text_black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:text="@string/ringtone_name_label"
        android:textColor="@color/text_gray"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/filename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="10dip"
        android:paddingBottom="10dip"
        android:text="ddddd"
        android:background="@drawable/line_shape_blue"
        android:textColor="@color/text_black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="15dip"
        android:text="@string/ringtone_type_label"
        android:textColor="@color/text_gray"
        android:textSize="14sp" />

    <Spinner
        android:id="@+id/ringtone_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="10dip"
        android:paddingBottom="10dip"
        android:textColor="@color/text_black"
        android:textSize="16sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="10dip"
        android:layout_gravity="right"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="56dip"
            android:text="@string/file_save_button_cancel"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dip"
            android:text="@string/file_save_button_save"
            android:textSize="14sp" />


    </LinearLayout>

</LinearLayout>
